--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
        <section id="welcome" class="text-center">
 <div class="parallax-inner">
-<img src="https://www.prateektechnosoft.com/netsuite-solutions/images/pr-Logo.png" class="profile image-circle" style="margin-top: 70px;" />
+<img src="https://whjr.imgix.net/e21b7bde-513f-41e6-944a-9f6f162cbead.png?&width=150" class="profile image-circle" style="margin-top: 70px;" />
 </div>
             </section>
         <section id="bio">
